tests/errors/inline_fragment_unselected_field.dang
# Test that accessing a field not selected in an inline fragment is caught at type-checking time

type Cat {
  name: String! = "Whiskers"
  lives: Int! = 9
}

type Dog {
  name: String! = "Rex"
  tricks: Int! = 3
}

union Pet = Cat | Dog

cat: Pet! = Cat
pets: [Pet!]! = [cat]

let results = pets.{{
  ... on Cat { name }
  ... on Dog { name }
}}

let first = results[0]
let desc = case (first) {
  c: Cat => c.lives
  d: Dog => d.name
}
